# rl_engine

./: .gitmodules  CMakeLists.txt
application/: CMakeLists.txt
application/src/: main.cpp
cmake/: imgui.cmake
engine/: CMakeLists.txt
engine/include/: Application.hpp  rlEngine.hpp
engine/include/Core/: Api.hpp  Application.hpp  Headers.hpp  Logger.hpp  ResourceManager.hpp  Scene.hpp
engine/include/Nodes/: Node.hpp  Node2D.hpp  Node3D.hpp  NodeCamera2D.hpp  NodeCamera3D.hpp  NodeLight3D.hpp  NodeMesh3D.hpp  NodeSprite2D.hpp
engine/src/Core/: Application.cpp  Logger.cpp  ResourceManager.cpp  Scene.cpp
engine/src/Nodes/: Node.cpp  Node2D.cpp  Node3D.cpp  NodeCamera2D.cpp  NodeCamera3D.cpp  NodeLight3D.cpp  NodeMesh3D.cpp  NodeSprite2D.cpp
